# redis-index

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.MD  README.md  pyproject.toml
.github/workflows/: main.yml
redis_index/: __init__.py  redis_index.py
tests/: conftest.py  test_redis_index.py
