[tool.poetry]
name = "redis-index"
version = "0.1.0"
description = ""
authors = ["vladimir.vyazovetskov <erhosen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
hot_redis = "^0.3.0"
statsd = "^3.3"
inflection = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
ipdb = {version = "^0.12.2", allows-prereleases = true}
fakeredis = "^1.0"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
