[tool.poetry]
name = "redis-index"
version = "0.5.0"
description = "Inverted Index using efficient Redis set"
authors = ["Vladimir Vyazovetskov <erhosen@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ErhoSen/redis-index"
repository = "https://github.com/ErhoSen/redis-index"
keywords = ["redis", "index", "gin", "intersection", "filters"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
hot_redis = "^0.3.0"
redis = "<=3.3.11"
inflection = "^0.3.1"
statsd = "^3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
ipdb = {version = "^0.12.2", allow-prereleases = true}
fakeredis = "^1.0"
pytest-cov = "^2.8"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
